`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.0.21.11

Thu Jul 16 09:48:30 1998  Kevin Layer  <layer@ultra>

	* move eli.htm to doc/
	* Makefile: always build readme.htm
	* fi-compile.el: new eli.htm location
	* local.mak: move readme.htm rule to Makefile

Thu Jul 16 09:47:46 1998    <layer@HOBART>

	* Doc0.el: fix bugs in html generation
	* eli.htm: fixes suggested by Patti
	* fi-keys.el: fix docstring
	* fi-subproc.el: fix docstring
	* fi-telnet.el: fix docstring
	* examples/emacs.el: fix default image name

*******************************************************************************
2.0.21.10

Wed Jul  8 01:42:02 1998  Kevin Layer  <layer@ultra>

	* fi-emacs19.el,
	* fi-xemacs.el: comment out "Start Composer with Podium" since the
	podium has been gone for years.  No need to confuse customers.
	* local.mak: add Doc0.el to release_files because fi-compile.el
	requires it.

*******************************************************************************
2.0.21.9

Mon Jul 06 10:05:21 1998    <layer@HOBART>

	* eli.htm: add note to `changes' section

*******************************************************************************
2.0.21.8

Thu Jul  2 13:31:45 1998  Kevin Layer  <layer@ultra>

	* fi-subproc.el: bug2930: fix the fix

*******************************************************************************
2.0.21.7

Wed Jul  1 17:15:27 1998  Kevin Layer  <layer@ultra>

	* fi-subproc.el: bug2930: handling of multiple
	*background-interaction* buffers; fix doc string

*******************************************************************************
2.0.21.6

Wed Jun 24 10:22:28 1998  Kevin Layer  <layer@ultra>

    removed files:
	* UserGuide.n
	* readme.htm
    added files:
	* Doc0.el
	* eli.htm